Fixed Icon Shift in Primary/Secondary Buttons
- Icon buttons in the navbar had "position: relative" with an offset of "top: 1px"
- That centered them better, which looked better on hover
- This style was unwillingly applied to other primary/secondary buttons
- The problem was due to incorrect CSS classes being attributed

CHANGELOG
- .icon CSS class is applied to both icon & primary/secondary buttons
- .icon-frame deals with the exclusive positioning of icon buttons:
    - "position: relative"
    - "top: 2px" (increased from 1px)
- That extracts relative positioning out of primary/secondary buttons, fixing bug

--- a/nav.css
+++ b/nav.css
@@ -45,15 +45,7 @@ nav>ul>li:hover {
 }
 
 /* ICONS */
-i,
-.icon::before {
-    width: 1.5em;
-    height: 1.5em;
-    position: relative;
-    top: 1px;
-}
-
-.btn {
+.icon-btn {
     text-decoration: none;
     /* background-color: #222; */
     color: #222;
@@ -61,8 +53,19 @@ i,
     border-radius: 12px;
 }
 
-.btn:hover {
+.icon-btn:hover {
     background-color: #eee;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 4px 16px 0px;
     transition: 200ms;
+}
+
+.icon-frame {
+    position: relative;
+    top: 2px;
+}
+
+i,
+.icon::before {
+    width: 1.5em;
+    height: 1.5em;
 }
